all excercises completed

--- a/Array-Cardio-Day-1/index.html
+++ b/Array-Cardio-Day-1/index.html
@@ -78,7 +78,7 @@
             { first: 'Lise', last: 'Meitner', year: 1878, passed: 1968 },
             { first: 'Hanna', last: 'Hammarström', year: 1829, passed: 1909 }
         ];
-        
+
         const people = [
             'Bernhard, Sandra', 'Bethea, Erin', 'Becker, Carl', 'Bentsen, Lloyd', 'Beckett, Samuel', 'Blake, William', 'Berger, Ric', 'Beddoes, Mick', 'Beethoven, Ludwig',
             'Belloc, Hilaire', 'Begin, Menachem', 'Bellow, Saul', 'Benchley, Robert', 'Blair, Robert', 'Benenson, Peter', 'Benjamin, Walter', 'Berlin, Irving',
@@ -90,7 +90,10 @@
         // 1. Filter the list of inventors for those who were born in the 1500's
         const fifteenHundreds = inventors.filter(inventor => (inventor.year >= 1500 && inventor.year < 1600));
         console.log("Inventors Born in the 1500's")
-        console.log(fifteenHundreds);
+        for (let i = 0; i < fifteenHundreds.length; i++){
+            console.log(fifteenHundreds[i]);
+        }
+       
 
 
         // Array.prototype.map()
@@ -110,21 +113,43 @@
         const totalYears = inventors.reduce((total, inventor) => {
             return total + (inventor.passsed - inventor.year);
         }, 0);
+        console.log("How many years Inventors Lived")
         console.log(totalYears);
 
         // 5. Sort the inventors by years lived
-        const oldest = inventors.sort(function(a,b) {
+        const oldest = inventors.sort(function (a, b) {
             const lastInventor = a.passed - a.year;
             const nextInventor = b.passed - b.year;
             return lastInventor > nextInventor ? -1 : 1;
         });
+        console.log("Inventors sorted be longest lived")
         console.table(oldest);
 
+        // 7. sort Exercise
+        // Sort the people alphabetically by last name
+        const alpha = people.sort((lastOne, nextOne) => {
+            const [aLast, aFirst] = lastOne.split(', ');
+            const [bLast, bFirst] = nextOne.split(', ');
+            return aLast > bLast ? 1 : -1;
+        });
+        console.log("Inventors sorted alphabetically by last name")
+        console.log(alpha)
 
 
+        // 8. Reduce Exercise
+        // Sum up the instances of each of these
         const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck'];
 
+        const transportation = data.reduce(function(obj, item) {
+            if (!obj[item]) {
+                obj[item] = 0;
+            }
+            obj[item]++;
+            return obj;
 
+        }, {});
+        console.log("summation of instances from a list")
+        console.log(transportation)
     </script>
 
 
